package com.pms.billing.entity;

public enum JalonStatut {
    PREVU,
    FACTURE,
    PAYE
}
