@startuml financial
title Financial Management

top to bottom direction

skinparam shadowing false
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #2C5F8A
skinparam classHeaderBackgroundColor #D6E4F0
skinparam packageBackgroundColor #EAF2FF
skinparam packageBorderColor #1F4E79
skinparam packageFontColor #1F4E79
skinparam defaultFontName Helvetica
skinparam defaultFontSize 12
skinparam ArrowColor #444444
skinparam ArrowThickness 1.5
skinparam noteBorderColor #999999
skinparam noteBackgroundColor #FFFDE7
hide circle

enum JalonStatut {
  PREVU
  FACTURE
  PAYE
}

class Project {
  - code : String
  - name : String
  - initialBudget : BigDecimal
  - engagementType : EngagementType
}

class JalonFacturation {
  - label : String
  - pourcentage : BigDecimal
  - montant : BigDecimal
  - statut : JalonStatut
  --
  + invoice() : void
  + recordPayment(amount : BigDecimal) : void
}

class Paiement {
  - montant : BigDecimal
  - datePaiement : LocalDate
}

class Avenant {
  - numero : String
  - objet : String
  - montant : BigDecimal
  --
  + computeRevisedBudget() : BigDecimal
}

class Mission {
  - objet : String
  - lieu : String
  - dateDebut : LocalDate
  - dateFin : LocalDate
}

class Risk {
  - description : String
  - probabilite : NiveauRisque
  - impact : NiveauRisque
  - statut : StatutRisque
}

Project "1" *-- "*" JalonFacturation : billing milestones >
JalonFacturation "1" *-- "*" Paiement : payments received >
Project "1" *-- "*" Avenant           : contract amendments >
Project "1" *-- "*" Mission           : field missions >
Project "1" *-- "*" Risk              : financial risks >

note right of JalonFacturation
  The sum of milestone percentages must not exceed 100%.
end note

note right of Avenant
  An amendment revises the project's initial budget.
end note

@enduml
